Make minor code improvements in GoodOrder